@@ -9,8 +9,7 @@
         
     <string id="30100">Vote (mymovies.it)</string>
     <string id="30101">In 10esimi</string>
-    <string id="30102">Direct vote, critics and the public</string>
-    <string id="30103">View at:</string>
+    <string id="30102">Direct vote, critics and the public (as outline)</string>
     
     <string id="30200">Immages and Videos</string>
     <string id="30201">All posters (slow)</string>
