@@ -9,8 +9,7 @@
         
     <string id="30100">Votazione (mymovies.it)</string>
     <string id="30101">In 10esimi</string>
-    <string id="30102">Includi Dizionari, Critica e Pubblico</string>
-    <string id="30103">Visualizza in:</string>
+    <string id="30102">Includi Dizionari, Critica e Pubblico (in outline)</string>
     
     <string id="30200">Immagini e Video</string>
     <string id="30201">Tutti i Posters (lento)</string>
