@@ -1,9 +1,14 @@
 [B]Note:[/B] if the scraper is very slow, disable setting tagged with "(slow)".
 
+[B]1.1.4[/B]
+- Added base scale (vote/10) in direct vote, critics and the public. Proposed on forum.xbmc.org
+- Now direct vote, critics and the public is only visible as "outline", beacuse studio and mpaa not present in mymovies are get from imdb. 
+- Some minor fix
+
 [B]1.1.3[/B]
 - Fixed regex: title, trailer, runtime
 - Added original title
-- Search imdb id form google...not perfect but i hope better.
+- Search imdb id from google...not perfect but i hope better.
 - Import info from IMDB (vote, mpaa, studio, top250). Deactivable from settings.
 
 [B]1.1.2[/B]
